# COPYRIGHT_BEGIN
#
# btpm - Bluetooth Presence Monitor
#
# Copyright (C) 2004 David Arnold.
# All rights reserved.
#
# This file is part of btpm.
#
# btpm is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#
# btpm is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
# License for more details.
#
# You should have received a copy of the GNU General Public License
# along with btpm; if not, write to the Free Software Foundation,
# Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
#
# COPYRIGHT_END

AC_REVISION($Revision: 1.1 $)
AC_INIT([btpm], [1.0.0], [davida@pobox.com])
AC_PROG_INSTALL
#AC_PATH_PROG(PYTHON, [python2 python], no)
#AC_SUBST(PYTHON)
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
